Added: Web settings setup

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                                 <li><a href='#feature-chat'>Chat</a></li>
                             </ul>
                         </li>
+                        <li><a href="#webpage">Setup Web Page<i class='fa fa-caret-down right'></i></a>
+                        </li>
 
                         <li>
                             <a href="#support">Support <span class="fa fa-arrow-right"></span></a>
@@ -870,6 +872,7 @@
                     <br />
                 </div>
             </section>
+
             <section class="section css-structure" id="feature-student">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
@@ -957,6 +960,7 @@
                     </p>
                 </div>
             </section>
+
             <section class="section css-structure" id="feature-teachers">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
@@ -1483,18 +1487,17 @@
                 <br />
                 <div class="sec-content">
 
-                    <h3>1) Admin Panel</h3>
+                    <h3>Admin Panel</h3>
                     <img src="images/admin/21.png" alt="e-School">
                     <br>
                     <br>
-                    <h3>2) Student App</h3>
+                    <h3>Student App</h3>
                     <img src="images/app/notificationlist.png" alt="e-School" style="text-align: center;">
 
                     <br>
                     <br>
 
-                    <h3>Custom Notifications<div class="new-button">NEW</div>
-                    </h3>
+                    <h3>Custom Notifications</h3>
                     <p>Custom notifications in eSchool allow users to create and send personalized messages for all
                         users, specific user, students, parents, and teachers which will shown on notification section
                         in applications. These notifications can be created only by admin to specific events, such as
@@ -1506,10 +1509,8 @@
             <section class="section css-structure" id="feature-chat">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
-                    <h2>Chat<div class="new-button" style="background-color: #fff;color: #2b70fa; font-size: 16;">NEW
-                        </div>
+                    <h2>Chat
                     </h2>
-
                 </div>
 
                 <br />
@@ -1520,23 +1521,151 @@
                         messaging using notifications, and supports text, images, and file sharing.
                         It ensures a seamless and organized communication experience for all users.</p>
 
-                    <table style="align-items: center;margin: 0 auto;"">
+                    <table style="align-items: center;margin: 0 auto;">
                         <tr>
                             <td><img src=" images/app/chatting_1.jpg" alt="e-School"
-                        style="text-align: center; max-height: 800px;">
-                        </td>
-                        <td>
-                            <div style="width: 10px;"></div>
-                        </td>
-                        <td><img src="images/app/chatting_2.jpg" alt="e-School"
-                                style="text-align: center; max-height: 800px;">
-                        </td>
+                                    style="text-align: center; max-height: 800px;">
+                            </td>
+                            <td>
+                                <div style="width: 10px;"></div>
+                            </td>
+                            <td><img src="images/app/chatting_2.jpg" alt="e-School"
+                                    style="text-align: center; max-height: 800px;">
+                            </td>
                         </tr>
                     </table>
 
                 </div>
             </section>
 
+            <!-- Web Page Setup-->
+            <section class="section css-structure" id="webpage">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Web Page<div class="new-button" style="background-color: #fff;color: #2b70fa; font-size: 16;">
+                            NEW
+                        </div>
+                    </h2>
+                </div>
+                <div class="sec-content">
+                    <div class="content-title">
+                        <br>
+                        <h2>Content Settings</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/1.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            In Web Settings the Content Settings section, admins can refine webpage content with
+                            precision. They can add sections, headings, descriptive text, and images seamlessly. This
+                            feature enables the creation of engaging webpages for enhanced user experience.
+                        </p>
+                        <p style="color: #2b70fa;">Note: <br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Content should be maximum with 500 character.<br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Image should be with 630 x 550 px for better
+                            experience.
+                        </p>
+
+                        <br>
+                        <h2>Educational Program</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/2.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            The Educational Program Details section empowers admin to showcase the key information about
+                            educational offerings with captivating titles and visually appealing images, enriching the
+                            webpage's content and engaging visitors effectively.
+                        </p>
+                        <br>
+                        <h2>Photos</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/3.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            Admin have the ability to elevate user engagement by incorporating event-specific images.
+                            This feature enriches the user experience by providing visually captivating content tailored
+                            to each event, effectively capturing visitors' attention and fostering a deeper connection
+                            with the platform.
+                        </p>
+                        <br>
+                        <h2>Video</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/4.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            Admin can enhance user experience by seamlessly integrating event-related videos. Simply
+                            upload videos to YouTube and then conveniently add the URL to our platform's designated
+                            video section in Admin panel. This feature ensures easy access to dynamic event coverage,
+                            enriching user engagement and providing valuable insights into our community's activities.
+                        </p>
+                        <br>
+                        <h2>FAQs</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/5.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            Admin can add and customize FAQs for users school-related inquiries from panel. With the
+                            ability to prioritize visibility, admins can easily activate or deactivate specific
+                            questions, providing them with seamless control over the visibility of FAQ content.,
+                            ensuring relevance and clarity. This feature streamlines communication, providing users with
+                            essential information while maintaining flexibility for admin to manage content effectively.
+                        </p>
+                        <br>
+                        <h2>Contact Us</h2>
+                        <br>
+                        <br>
+                        <video src="images/web/6.webm" class="responsive-video" controls></video>
+                        <br>
+                        <br>
+                        <p>
+                            From the Contact Us section of our webpage, users can conveniently submit school-related
+                            queries. Admin have access to these queries in the web settings, allowing them to respond
+                            directly via email. This streamlined process ensures efficient communication, enabling
+                            administrators to address user inquiries promptly and effectively.
+                        </p>
+                        <br>
+                        <h2>Sliders</h2>
+                        <br>
+                        <br>
+                        <image src="images/web/7.png" class="responsive-video" alt="e-School" />
+                        <br>
+                        <br>
+                        <p>
+                            In the sliders section of the Admin panel, admin can effortlessly manage slider images
+                            for web pages. They have the flexibility to upload images for both the web and app or
+                            specify them exclusively for one platform. If no slider image is uploaded, default
+                            sliders are automatically displayed on web pages, ensuring a visually appealing
+                            experience for users.
+                        </p>
+                        <br>
+                        <h2>News & Events</h2>
+                        <br>
+                        <br>
+                        <image src="images/web/8.png" class="responsive-video" alt="e-School" />
+                        <br>
+                        <br>
+                        <p>
+                            In the events section of the Admin panel, admin can easily add and manage upcoming
+                            events. These events, including holidays and other noteworthy occasions, are
+                            displayed on the webpage in a date-wise format. The news and events section
+                            showcases events starting from today's date, with a maximum limit of 6 entries. This
+                            streamlined approach ensures that users stay informed about upcoming events without
+                            overwhelming them with excessive information.
+                        </p>
+
+                    </div>
+                </div>
+
+            </section>
 
             <!--Support-->
             <section class="section support" id="support">
