v-3.2.1 features and modifications added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                                 <li><a href='#feature-chat'>Chat</a></li>
                                 <li><a href='#feature-document-generation'>Academic Document Generation</a></li>
                                 <li><a href='#feature-leave-management'>Leave Management</a></li>
+                                <li><a href='#feature-chat-settings'>Chat Settings</a></li>
                             </ul>
                         </li>
                         <li><a href="#webpage">Setup Web Page<i class='fa fa-caret-down right'></i></a>
@@ -128,16 +129,16 @@
             <!--Introduction Section-->
             <section class="section introduction" id="introduction">
                 <br />
-                <div class="sec-content">
-                    <h2>e-School</h2>
-                    <h3>Documentation</h3>
+                <div class="sec-content" style="text-align: center;">
+                    <h2>eSchool Documentation</h2>
                     <div class="separator"></div>
-                    <strong>By :</strong> WRTeam<br />
-                    <strong>Email :</strong>
-                    <a href="mailto:wrteam.aayush@gmail.com ">wrteam.aayush@gmail.com</a> <br />
-
+                    <p style="text-align: left;">
+                        <strong>By :</strong> WRTeam<br />
+                        <strong>Email :</strong>
+                        <a href="mailto:wrteam.aayush@gmail.com ">wrteam.aayush@gmail.com</a> <br />
+                    </p>
                     <br />
-                    <p>
+                    <p style="text-align: left;">
                         Thank you for purchasing <strong>e-School</strong>.
                         We appreciate your support. In this documentation, you will find instructions on how to set up
                         the admin panel and mobile application for e-School.
@@ -906,7 +907,7 @@
                         that students progress to the appropriate next level in their education.
                     </p>
                     <br>
-                    <h3>Admission Form Dynamic Fields<div class="new-button">NEW</div>
+                    <h3>Admission Form Dynamic Fields
                     </h3>
                     <p>
                         The Dynamic Admission Form Field is a feature that simplifies students, parents and teachers
@@ -915,6 +916,15 @@
                         with various types like
                         textboxes, radio buttons, checkboxes, textareas, and file uploaders to suit the specific needs
                         of the schools, and making the admission process efficient and adaptable to changing needs.
+                    </p>
+                    <br />
+                    <br>
+                    <h3>Educational Program<div class="new-button">NEW</div>
+                    </h3>
+                    <p>
+                        Admins can now link Educational Programs with specific classes efficiently. By navigating to the
+                        "Educational Programs" section , they can select a program and associate it with relevant
+                        classes.
                     </p>
                     <br />
                 </div>
@@ -1043,6 +1053,7 @@
                         <li><a href="#feature-announcements">Announcement</a></li>
                         <li><a href="#feature-online-and-offline-exams">Online and Offline
                                 Exams</a></li>
+                        <li><a href="#feature-leave-management">Leave Management</a></li>
                     </ul>
 
                     <br>
@@ -1094,7 +1105,7 @@
                         time slots.
                     </p>
                     <br>
-                    <h3>Online Class/Custom Link <div class="new-button">NEW</div>
+                    <h3>Online Class/Custom Link
                     </h3>
                     <p>Teachers can add links to timetable slots, making the link titles visible in the application.
                         When tapped, these links will open the associated URL. This feature allows teachers to directly
@@ -1261,7 +1272,7 @@
                         attendance data.</p>
                     <br>
 
-                    <h3>Add Bulk Data (Teacher Panel Login)<div class="new-button">NEW</div>
+                    <h3>Add Bulk Data (Teacher Panel Login)
                     </h3>
 
                     <p>Teachers can easily manage class attendance by utilizing the Bulk Data Entry feature. They can
@@ -1274,6 +1285,14 @@
                     <h3>eSchool & eSchool Teacher application</h3>
                     <p>Teachers can also take/view attendance from the teacher application. Students and their parents
                         can view their attendance monthly report from the eSchool application.</p>
+
+                    <br>
+                    <h3>Attendance Report <div class="new-button">NEW</div>
+                    </h3>
+                    <p>Admins and class teachers can view attendance reports by selecting the session year and class
+                        name. This feature allows them to access and review attendance records for any session year,
+                        providing a comprehensive overview of student attendance patterns and helping in maintaining
+                        accurate records. </p>
                 </div>
             </section>
             <section class="section css-structure" id="feature-lessons-and-topics">
@@ -1351,6 +1370,12 @@
                     </p>
                     <p>Students will be able to see the feedback and updated status of their submitted assignments in
                         the "Submitted Assignment" section of the application.</p>
+                    <br>
+                    <div class="new-button">NEW</div>
+                    <p>Students now have the ability to include textual data along with their assignment files directly
+                        from the application. This feature allows students to provide additional context, explanations,
+                        or details related to their assignments, enhancing communication and clarity between students
+                        and instructors.</p>
 
                     <br />
                 </div>
@@ -1523,7 +1548,7 @@
 
                     <br />
 
-                    <h3>Compulsory Fee Payment Settings <div class="new-button">NEW</div>
+                    <h3>Compulsory Fee Payment Settings
                     </h3>
                     <table>
                         <tr>
@@ -1556,7 +1581,7 @@
                     </table>
 
                     <br><br>
-                    <h3>Student Can Pay Their Own Fees <div class="new-button">NEW</div>
+                    <h3>Student Can Pay Their Own Fees
                     </h3>
                     <p>Admin can enable settings from the Fees Configurations form, which allows students to pay their
                         fees. When the Admin enables the student fee payment mode, it activates the necessary options
@@ -1594,11 +1619,10 @@
             <section class="section css-structure" id="feature-chat">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
-                    <h2>Chat
-                    </h2>
+                    <h2>Chat</h2>
                 </div>
 
-                <br />
+
                 <div class="sec-content">
                     <p>The Chat feature in our eSchool project enables students to communicate with their class
                         teachers, while parents can chat with any of their children's teachers. Teachers can easily
@@ -1703,11 +1727,7 @@
             <section class="section css-structure" id="feature-leave-management">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
-                    <h2>Leave Management Teacher/Staff Panel<div class="new-button"
-                            style="background-color: #fff;color: #2b70fa; font-size: 16;">
-                            NEW
-                        </div>
-                    </h2>
+                    <h2>Teacher/Staff Leave Management</h2>
                 </div>
                 <br>
                 <br>
@@ -1761,8 +1781,73 @@
 
                     <image src="images/admin/37.png" class="responsive-video" controls></image>
 
-                    <p>Teacher/Staff can show their leaves details remaining leaves for individual session year.</p>
+                    <p>Teacher/Staff can view their leaves details remaining leaves for individual session year.</p>
 
+                </div>
+
+                <div class="sec-content">
+                    <h2>Leave Management (Teacher App)<div class="new-button">NEW</div>
+                    </h2>
+                    <br>
+
+                    <table style="align-items: center;margin: 0 auto;">
+                        <tr>
+                            <td><img src=" images/app/add_leave.png" alt="e-School" class="responsive-video"
+                                    style="text-align: center; max-height: 700px;">
+                            </td>
+                            <td>
+                                <div style="width: 10px;"></div>
+                            </td>
+                            <td><img src="images/app/manage_leaves.png" alt="e-School" class="responsive-video"
+                                    style="text-align: center; max-height: 700px;">
+                            </td>
+                            <td>
+                                <div style="width: 10px;"></div>
+                            </td>
+                            <td><img src="images/app/view_leave_detail.png" alt="e-School" class="responsive-video"
+                                    style="text-align: center; max-height: 700px;">
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p>Teachers can apply for leave and check status of those from the application. Leave request can
+                        have date-range, but if there are any holiday days in that range they'll be auto-removed from
+                        the leave request. They can delete pending leave requests as well. Remaining and taken monthly
+                        leave count is also shown.</p>
+                </div>
+            </section>
+
+            <section class="section css-structure" id="feature-chat-settings">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Chat Settings
+                    </h2>
+                </div>
+                <br>
+                <br>
+                <div class="sec-content">
+                    <h2>Chat Settings</h2>
+                    <br>
+
+                    <image src="images/admin/chatsetting.png" class="responsive-video" controls></image>
+                    <br>
+
+                    <p>Admin settings for chat messages provide essential controls to enhance performance and user
+                        experience. By setting the maximum upload file limits, admins can restrict the number of files a
+                        user can attach in a single message, which helps manage server load and prevents spam. The
+                        maximum file upload size setting allows admins to cap the size of each uploaded file, ensuring
+                        that large files do not consume excessive bandwidth or storage space. Additionally, the maximum
+                        text message character limits setting defines the maximum length of a text message, promoting
+                        readability and preventing overly lengthy messages that could disrupt the conversation flow.
+                        These settings are crucial for maintaining a balanced and efficient chat system.</p>
+                    <p>Admins can configure automatic message deletion by adding cron jobs on the server. This allows
+                        for scheduled removal of messages, helping manage storage space and maintain privacy. By setting
+                        specific intervals for deletion, admins can ensure that older messages are routinely purged,
+                        keeping the chat environment clean and efficient.</p>
+                    <p>Admins can delete messages by specifying a "from date" and "to date" and then clicking the delete
+                        button. This action removes all messages within the selected date range, allowing for efficient
+                        management of chat history and ensuring that outdated or irrelevant messages are cleared out
+                        systematically.</p>
                 </div>
             </section>
 
